--- a/non-named-env-properties.gradle
+++ b/non-named-env-properties.gradle
@@ -46,3 +46,6 @@ ext.SHIB_ADDRESS=project.properties['openshiftEnv']+".apps."+project.properties[
 
 ext.MAIL_ADDRESS="mail-"+project.properties['openshiftEnv']+".apps."+project.properties['CLUSTER_ADDRESS']
 ext.ADMIN_ADDRESS="admin-"+project.properties['openshiftEnv']+".apps."+project.properties['CLUSTER_ADDRESS']
+
+//TODO add named env file upload claims
+ext.FILE_UPLOAD_CLAIM="file-upload-claim"
