IFS-1875 - continued to reactor data biuld services to allow GenerateTestData to do Futures orchestration and allow services to just concentrate on generating data

--- a/ifs-data-layer/ifs-data-service/src/test/resources/application-seeding-db.properties
+++ b/ifs-data-layer/ifs-data-service/src/test/resources/application-seeding-db.properties
@@ -16,4 +16,4 @@ server.port=34567
 
 # possible values are SINGLE_THREADED (for executing web test generation in the main thread) or
 # MULTI_THREADED (for parallel execution)
-ifs.generate.test.data.execution=MULTI_THREADED
+# ifs.generate.test.data.execution=MULTI_THREADED
