IFS-2533 Added validation message for rejection reason with too many characters

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -503,6 +503,7 @@ validation.project.eligibility.cost.subcontracting=Please enter subcontracting c
 validation.project.eligibility.cost.travelsubsistence=Please enter a travel and subsistence cost.
 validation.project.eligibility.cost.other=Please enter any other cost.
 
+validation.rejection.gol.reason.has.too.many.characters=Your reason cannot be more than 128 characters.
 
 FINANCE_CHECKS_COST_LESS_THAN_ZERO=Cost cannot be less than zero.
 FINANCE_CHECKS_CONTAINS_FRACTIONS_IN_COST=Cost cannot contain fractional part.
