IFS-2928 renamed to assessorFinanceView

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -201,7 +201,7 @@ validation.assessorsform.assessorPay.only.numbers=Please enter only numbers.
 validation.assessorsform.assessorPay.min=The minimum value you can enter is zero.
 validation.assessorsform.assessmentPanel.required=Please select an assessment panel option.
 validation.assessorsform.interviewStage.required=Please select an interview stage option.
-validation.assessorsform.financeView.required=Please select a finance view option.
+validation.assessorsform.assessorFinanceView.required=Please select a finance view option.
 
 validation.initialdetailsform.executiveuserid.required=Please select a Portfolio Manager.
 validation.initialdetailsform.innovationsectorcategoryid.required=Please select an innovation sector.
