IFS-2919 adding logging to understand when it happens in future

--- a/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 logging.level.root=WARN
 logging.level.org.innovateuk.ifs=INFO
 logging.level.org.springframework=WARN
+logging.level.org.innovateuk.ifs.file.transactional=INFO
 
 # Uncomment the block below to enable detailed SQL logging
 #spring.jpa.show-sql=true
