--- a/ifs-data-layer/build.gradle
+++ b/ifs-data-layer/build.gradle
@@ -1,6 +1,6 @@
 
 subprojects {
-    apply from: rootProject.file("java-spring-boot.gradle")
+    apply from: rootProject.file("gradle-support/java-spring-boot.gradle")
     ext.ifsWebSystemUserId = "8394d970-b250-4b15-9621-3534325691b4"
 }
 
