--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-apply from: "versions.gradle"
+apply from: "gradle-support/versions.gradle"
 
 allprojects {
     group 'innovateuk'
@@ -20,9 +20,9 @@ def isNotProductionEnv() {
     !"production".equals(openshiftEnv)
 }
 
-apply from: "openshift-support.gradle"
-apply from: "zipkin-support.gradle"
-apply from: "docker-compose.gradle"
+apply from: "gradle-support/openshift-support.gradle"
+apply from: "gradle-support/zipkin-support.gradle"
+apply from: "gradle-support/docker-compose.gradle"
 
 
 if (!project.hasProperty('osTestArgs')) {
@@ -34,7 +34,6 @@ if (!project.hasProperty('osTestArgs')) {
 configure(subprojects - project(":ifs-auth-service")) {
 
     apply plugin: 'io.spring.dependency-management'
-
 
 }
 
