--- a/docker/build.gradle
+++ b/docker/build.gradle
@@ -1,5 +1,5 @@
 subprojects {
-    apply from: rootProject.file("openshift-build.gradle")
+    apply from: rootProject.file("gradle-support/openshift-build.gradle")
 }
 
 
