--- a/docker/ifs-mysql/build.gradle
+++ b/docker/ifs-mysql/build.gradle
@@ -1,5 +1,5 @@
 def sqlVersion="5.6.29"
-apply from: rootProject.file("openshift-methods.gradle")
+apply from: rootProject.file("gradle-support/openshift-methods.gradle")
 buildDocker.tag = "innovateuk/ifs-mysql:" + sqlVersion
 
 tagDocker.onlyIf{ !isNamedEnv() }
