--- a/ifs-commons/build.gradle
+++ b/ifs-commons/build.gradle
@@ -1,4 +1,4 @@
-apply from: rootProject.file("java-spring-boot.gradle")
+apply from: rootProject.file("gradle-support/java-spring-boot.gradle")
 
 dependencies {
     compile 'org.apache.commons:commons-lang3:3.5'
