--- a/ifs-registration-service/build.gradle
+++ b/ifs-registration-service/build.gradle
@@ -1,5 +1,5 @@
-apply from: rootProject.file("java-spring-boot.gradle")
-apply from: rootProject.file("openshift-build.gradle")
+apply from: rootProject.file("gradle-support/java-spring-boot.gradle")
+apply from: rootProject.file("gradle-support/openshift-build.gradle")
 
 description = """"""
 tasks.withType(JavaCompile) {
@@ -34,7 +34,7 @@ jar {
     baseName = 'ifs-registration-service'
 }
 
-apply from: rootProject.file("prepare-docker.gradle")
+apply from: rootProject.file("gradle-support/prepare-docker.gradle")
 
 
 task prepareDockerInputRegService {
