--- a/ifs-data-layer/ifs-data-service/src/main/resources/application-local.properties
+++ b/ifs-data-layer/ifs-data-service/src/main/resources/application-local.properties
@@ -19,7 +19,7 @@ ifs.data.service.file.storage.virus.scanning.enabled=false
 ifs.system.email.address=noreply-innovateuk@example.com
 
 spring.devtools.remote.secret=supersecretremotekey
-spring.boot.admin.url=http://admin:8123
+#spring.boot.admin.url=http://admin:8123
 spring.boot.admin.client.service-url=http://data-service:8080
 
 info.version=${project.version}
