--- a/gradle.properties
+++ b/gradle.properties
@@ -37,3 +37,4 @@ version=1.1.28-SNAPSHOT
 #mail-sink.version=1.1.23-MAIL-SINK-VERSION
 #mysql-client.version=1.1.23-MYSQL_CLIENT-VERSION
 dockerRegistry=docker-registry-default.apps.prod.ifs-test-clusters.com
+ifs.sil-rest-email-base-url=https://sil.uat.innovateuk.org
