--- a/ifs-data-layer/database-support.gradle
+++ b/ifs-data-layer/database-support.gradle
@@ -1,4 +1,4 @@
-ext.sqlContainer = "mysql"
+ext.sqlContainer = "ifs-database"
 ext.testSchema = "ifs_test"
 ext.dockerComposeFile = "docker-compose/docker-compose.yml"
 
@@ -20,7 +20,7 @@ task startMySql(type: Exec) {
 task createTestSchema(type: Exec) {
     workingDir '../../'
     doFirst {
-        commandLine 'docker-compose', '-f', dockerComposeFile, 'exec', '-T', sqlContainer, 'mysql', '-uroot', '-ppassword', '-e', 'create database if not exists ' + testSchema
+        commandLine 'docker-compose', '-p', 'innovation-funding-service', '-f', dockerComposeFile, 'exec', '-T', sqlContainer, 'mysql', '-uroot', '-ppassword', '-e', 'create database if not exists ' + testSchema
     }
 }
 
