--- a/docker-compose/docker-compose-finance-totals.yml
+++ b/docker-compose/docker-compose-finance-totals.yml
@@ -12,15 +12,13 @@ services:
         aliases:
           - ifs-finance-data-service
     hostname: finance-data-service
-    links:
-      - mysql-finance-totals:ifs-finance-database
     ports:
       - "8092:8080"
       - "9012:8000"
     environment:
       - JAVA_OPTS=-Xmx300m -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8000,suspend=n
 
-  mysql-finance-totals:
+  ifs-finance-database:
     image: innovateuk/ifs-mysql:5.6.29
     ports:
       - "3307:3306"
