--- a/gradle-support/docker-compose.gradle
+++ b/gradle-support/docker-compose.gradle
@@ -14,6 +14,8 @@ apply plugin: com.avast.gradle.dockercompose.DockerComposePlugin
 
 dockerCompose {
 
+    projectName="innovation-funding-service"
+
     if (project.hasProperty('ifs.debug.disabled') ? project.property('ifs.debug.disabled').toBoolean() : false) {
         //Temp change to allow testing of compose HTTP_TIMEOUT issue
         useComposeFiles = ['docker-compose/docker-compose-debug.yml']
