--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -14,6 +14,7 @@ validation.field.max.word.count=Maximum word count exceeded. Please reduce your 
 validation.field.max.number.of.digits=You must enter a value less than {0} digits.
 validation.field.too.many.characters=This field cannot contain more than {1} characters.
 validation.field.too.few.characters=This field should contain at least {0} characters.
+validation.field.non.decimal.format=This field can only accept whole numbers.
 
 # Annotation validator defaults.
 org.hibernate.validator.constraints.NotBlank.message={validation.field.must.not.be.blank}
