--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ gradle-app.setting
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
+hs_err_pid*
 
 ### Gulp ###
 gulpfile.tmp.*
@@ -91,7 +92,7 @@ Icon
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
-.Spotlight-V100
+.Spotlight-V100gst
 .TemporaryItems
 .Trashes
 .VolumeIcon.icns
