--- a/ifs-data-layer/ifs-finance-data-service/build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/build.gradle
@@ -6,7 +6,9 @@ apply from: rootProject.file("gradle-support/prepare-docker.gradle")
 
 apply plugin: 'base'
 apply plugin: 'org.flywaydb.flyway'
-apply from: "../database-support.gradle"
+if (project.property('ifsFinanceTotalsEnabled').toBoolean()) {
+    apply from: "../database-support.gradle"
+}
 
 configurations {
     providedRuntime
