--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -110,6 +110,7 @@ dependencies {
     testCompile project(":ifs-data-layer:data-service-commons").sourceSets.test.output
     testCompile project(":ifs-data-layer:data-service-file").sourceSets.test.output
 
+    testCompile 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testCompile "com.openpojo:openpojo:0.8.4"
     testCompile "org.skyscreamer:jsonassert:1.3.0"
     testCompile 'org.powermock:powermock-api-mockito:1.6.5'
