--- a/ifs-data-layer/ifs-finance-data-service/build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     compile project(':ifs-data-layer:data-service-commons')
 
     testCompile 'org.assertj:assertj-core:3.9.0'
+    testCompile 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testCompile project(':ifs-resources')
     testCompile project(':ifs-commons')
     testCompile project(':ifs-data-layer:data-service-commons')
