--- a/ifs-data-layer/ifs-data-service/db-reset.gradle
+++ b/ifs-data-layer/ifs-data-service/db-reset.gradle
@@ -1,5 +1,3 @@
-import com.bmuschko.gradle.docker.tasks.image.*
-
 buildscript {
 
 
@@ -42,6 +40,10 @@ task dbResetDockerEnv {
         }
         copy {
             from file("${rootProject.projectDir}/setup-files/scripts/docker/clean-migrate-db-sync-ldap.sh")
+            into inputDir
+        }
+        copy {
+            from file("${rootProject.projectDir}/setup-files/scripts/docker/baseline-db.sh")
             into inputDir
         }
     }
