--- a/ifs-data-layer/ifs-data-service/docker-build.gradle
+++ b/ifs-data-layer/ifs-data-service/docker-build.gradle
@@ -20,6 +20,7 @@ project.ext['flyway.locations']=flywayPatchesPath + "/migration," +
 project.ext['flyway.placeholders.ifs.system.user.uuid']='c0d02979-e66e-11e7-ac43-0242ac120002'
 
 ext.ifsFinanceTotalsEnabled=true
+ext.ifsFinanceTotalsBaseURL='http://finance-data-service:8080'
 
 ext.ifsFlywayLocations="db/migration,db/setup,db/webtest"
 
