IFS-2560 exclude data reset scripts from copy to production

--- a/ifs-data-layer/ifs-data-service/db-reset.gradle
+++ b/ifs-data-layer/ifs-data-service/db-reset.gradle
@@ -32,17 +32,20 @@ task dbResetDockerEnv {
             include 'db/**/*.sql'
             into inputDir
         }
-        copy {
-            from file("${rootProject.projectDir}/setup-files/scripts/docker/ldap-sync-from-ifs-db.sh")
-            into inputDir
-        }
-        copy {
-            from file("${rootProject.projectDir}/setup-files/scripts/docker/clean-migrate-db.sh")
-            into inputDir
-        }
-        copy {
-            from file("${rootProject.projectDir}/setup-files/scripts/docker/clean-migrate-db-sync-ldap.sh")
-            into inputDir
+        // Not copying these scripts if production to avoid risk of them being executed on production DB.
+        if(isNotProductionEnv()) {
+            copy {
+                from file("${rootProject.projectDir}/setup-files/scripts/docker/ldap-sync-from-ifs-db.sh")
+                into inputDir
+            }
+            copy {
+                from file("${rootProject.projectDir}/setup-files/scripts/docker/clean-migrate-db.sh")
+                into inputDir
+            }
+            copy {
+                from file("${rootProject.projectDir}/setup-files/scripts/docker/clean-migrate-db-sync-ldap.sh")
+                into inputDir
+            }
         }
         copy {
             from file("${rootProject.projectDir}/setup-files/scripts/docker/baseline-db.sh")
