flyway gradle created

--- a/ifs-data-layer/ifs-finance-data-service/build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/build.gradle
@@ -5,7 +5,7 @@ apply from: rootProject.file("gradle-support/prepare-docker.gradle")
 
 
 apply plugin: 'base'
-apply plugin: 'org.flywaydb.flyway'
+apply from: "../flyway.gradle"
 apply from: "../database-support.gradle"
 
 configurations {
@@ -59,7 +59,6 @@ configurations {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'mysql:mysql-connector-java'
-    compile 'org.flywaydb:flyway-core:4.1.2'
     compile 'org.mapstruct:mapstruct:1.2.0.Final'
     mapstruct 'org.mapstruct:mapstruct-processor:1.2.0.Final'
 
