--- a/docker/ifs-mail-sink/build.gradle
+++ b/docker/ifs-mail-sink/build.gradle
@@ -1,3 +1,4 @@
+apply from: rootProject.file("gradle-support/openshift-build.gradle")
 tagDocker.onlyIf { !isNamedEnv() }
 tagDocker.tag = mailSinkVersion
 tagDockerLocal.tag = mailSinkVersion
