--- a/docker/ifs-mysql-client/build.gradle
+++ b/docker/ifs-mysql-client/build.gradle
@@ -1,3 +1,4 @@
+apply from: rootProject.file("gradle-support/openshift-build.gradle")
 tagDocker.tag = mysqlClientVersion
 tagDockerLocal.tag = mysqlClientVersion
 osStageRemote.tag = mysqlClientVersion
